fixed overflow

--- a/src/main.css
+++ b/src/main.css
@@ -106,5 +106,4 @@ pre {
     margin: 20px auto;
     color:white;
     background-color: #24292E;
-    overflow-y: scroll ;
 }
